# Course_work_04

./: README.md  main.py  pyproject.toml
src/: classes_api.py  utils.py  vacancy.py
